<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Login.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorFondo2">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorFondo2"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/menu"
                    android:layout_width="30dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/menu" />

                <TextView
                    android:id="@+id/elVerol"
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/vogue"
                    android:text="EL VEROL"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="36sp" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/cuadradoiniciarsesion"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="71dp"
        android:scaleType="fitXY"
        android:src="@drawable/cuadrado" />

    <TextView
        android:id="@+id/iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/vogue"
        android:text="INICIAR SESION"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />

    <ImageView
    android:id="@+id/cuadradousuario"
    android:layout_width="384dp"
    android:layout_height="50dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="180dp"
    android:scaleType="fitXY"
    android:src="@drawable/cuadrado" />

    <EditText
        android:id="@+id/nombredeusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="190dp"
        android:hint="Nombre de usuario" />

    <ImageView
        android:id="@+id/cuadradocontraseña"
        android:layout_width="384dp"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="280dp"
        android:scaleType="fitXY"
        android:src="@drawable/cuadrado" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:inputType="textPassword"
        android:layout_marginTop="290dp"
        android:hint="Contraseña" />

    <Button
        android:id="@+id/iniciarsesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="390dp"
        android:fontFamily="@font/vogue"
        android:onClick="onClickLogin"
        android:text="Iniciar sesion"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vogue"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="450dp"
        android:text="¿Todavía no tienes cuenta?" />

    <TextView
        android:id="@+id/registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="470dp"
        android:fontFamily="@font/vogue"
        android:text="Regístrate" />

    <Button
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/vogue"
        android:text="Registrarse"
        android:textSize="18sp" />


</FrameLayout>