<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal">

    <!--
    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:textAppearance="?attr/textAppearanceListItem"/>
    -->
    <ImageView
        android:id="@+id/imagen1"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_marginLeft="36dp"
        android:scaleType="fitXY" />
    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        style="?android:attr/textAppearanceLarge"
        tools:text="@string/item_content"/>
</LinearLayout>