...
                    android:text="EL VEROL"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="36sp" />

                <ImageView
                    android:id="@+id/login1"
                    android:layout_width="30dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/login" />

...
